# waolapp

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
.github/workflows/: ci.yml
Waola++/: ArpRequest.cpp  ArpRequest.h  ArpResult.h  Arper.cpp  Arper.h  ArperImpl.cpp  ArperImpl.h  ArperImplLin.cpp  ArperImplMac.cpp  ArperImplWin.cpp  ArperImplWin.h  ArperImplX.cpp  ArperImplX.h  CMakeLists.txt  Common.h  HostEditable.cpp  InterfaceProvider.cpp  InterfaceProvider.h  IpAddrGenerator.h  IpAddrIterator.h  IpAddress.cpp  KnockerUpper.cpp  KnockerUpper.h  KnockerUpperLin.cpp  KnockerUpperMac.cpp  KnockerUpperWin.cpp  KnockerUpperX.cpp  MacAddress.cpp  Network.cpp  Network.h  NetworkInterface.cpp  NetworkInterface.h  NetworkInterfaceLin.cpp  NetworkInterfaceMac.cpp  NetworkInterfaceWin.cpp  Scanner.cpp  Scanner.h  Subnet.cpp  Subnet.h  SubnetGenerator.cpp  (+3 more)
Waola++/include/: DepsLin.h  DepsMac.h  DepsWin.h  DepsX.h  Host.h  HostEditable.h  HostField.h  HostSaved.h  IInterfaceProvider.h  IKnockerUpper.h  INetwork.h  IScanner.h  IVault.h  IpAddress.h  IpAddress.hpp  L7Result.h  MacAddress.h  MacAddress.hpp  NetworkParams.h  OpResult.h  Platform.h  ScannerFactory.h  ScannerParams.h  VaultOpResult.h  VaultParams.h  Waola++.h
Waola++/tests/: CMakeLists.txt  MockIInterfaceProvider.h  MockIKnockerUpper.h  MockIScanner.h  MockIVault.h  NetworkTestFixture.h  TestArper.cpp  TestHostEditable.cpp  TestIpAddress.cpp  TestMacAddress.cpp  TestNetwork.cpp  TestNetworkInterface.cpp  TestSubnet.cpp  test_network_interface.cpp
WaolaQ/: About.qml  AboutView.qml  AboutViewForm.ui.qml  CMakeLists.txt  CellGeneric.qml  CellLso.qml  CellRect.qml  CellText.qml  Converters.js  Credits.qml  EditView.qml  EditViewForm.ui.qml  LabeledTextField.qml  License.qml  Main.qml  MainView.qml  MainViewForm.ui.qml  NetworkModelMoc.qml  OverlayLoader.qml  WDelegateChooser.qml  WShortcuts.qml  WTabBar.qml  WTabButton.qml  WToolBar.qml  WToolButton.qml  WToolSeparator.qml  main.cpp  qtquickcontrols2.conf  res.qrc  res.rc  waolaq.desktop.in
WaolaQ/+windows/: qtquickcontrols2.conf
WaolaQ/icons/: Waola.icns
WaolaQt/: CMakeLists.txt  EClipboard.cpp  EClipboard.h  ENetworkModel.cpp  ENetworkModel.h  ETextReader.cpp  ETextReader.h  IPersistor.h  Persistor.cpp  Persistor.h  qmldir
WaolaQt/tests/: CMakeLists.txt  MockINetwork.h  MockIPersistor.h  NetworkModelTest.cpp  NetworkModelTestFixture.h
eifaceprov/: CMakeLists.txt  common.h  helper.c  helper.h  iface_prov.c  iface_prov.h  iface_prov_l.c  iface_prov_m.c  iface_prov_priv.h  iface_prov_u.c  iface_prov_u.h  iface_prov_w.c  net_iface.c  net_iface.h
eifaceprov/include/: e_iface_prov.h  e_iface_prov_platform.h  e_iface_prov_win.h  e_net_iface.h  ether_addr_len.h  win_defs.h
eifaceprov/tests/: CMakeLists.txt  mock_e_iface_prov.h  test_enet_iface.cpp  test_iface_prov.cpp
macOsBpf/: bpf_test.sh  com.asuscomm.smartnclever.ChmodBpf.plist  install_daemon.sh  uninstall_daemon.sh
macOsBpf/ChmodBpf/: WaolaBPF.sh
waolac++/: CMakeLists.txt  Waolac.cpp  Waolac.h  main.cpp
